--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 .idea/**/tasks.xml
 .idea/dictionaries
 
+# Gradle generated stuff:
+.idea/modules/
+
 # Sensitive or high-churn files:
 .idea/**/dataSources/
 .idea/**/dataSources.ids
