--- a/codekvast.conf
+++ b/codekvast.conf
@@ -6,14 +6,13 @@
 #-----------------------------------------------------------------------------------------
 
 # What is my application's name? Useful if more that one app deliver data to the same Codekvast server.
-# NOTE: $CODEKVAST_APP_NAME is injected by Heroku
-appName = ${CODEKVAST_APP_NAME}
+appName = codekvast-spring
 
 # What is my app's version?
 # The value of this parameter is a strategy for obtaining the actual version from a file name, a jar file manifest or from
 # a literal value.
 # See user manual for full description of how to specify the appVersion.
-appVersion = filename codekvast-spring-(.*)-SNAPSHOT.jar
+appVersion = filename codekvast-spring-(.*).jar
 
 # Where are my application binaries?
 # A comma-separated list of file system paths relative to the root directory.
@@ -29,12 +28,12 @@ packages = io.codekvast.sample
 
 # In which environment is the application deployed?
 # An arbitrary string, useful for separating data collected in different environments.
-# environment = production
+environment = heroku
 
 # Which methods should be tracked?
 # One of the keywords public, protected, package-private or private.
 # See user manual for full description.
-# methodVisibility = protected
+methodVisibility = private
 
 # Where is the Codekvast server?
 # NOTE: $CODEKVAST_URL is injected by Heroku
