--- a/build.gradle
+++ b/build.gradle
@@ -28,20 +28,22 @@ dependencies {
 
 //--- Changes to make it work with Codekvast
 
-configurations {
-    codekvastagent
-}
+def codekvastVersion='0.20.0'
+configurations { codekvast }
+dependencies { codekvast "io.codekvast:codekvast-agent:$codekvastVersion:all" }
 
-dependencies {
-    codekvastagent 'io.codekvast:codekvast-agent:0.20.0:all'
-}
-
-apply plugin: 'application'
 bootRepackage {
+    // Run the app as an ordinary Gradle application instead of an executable Spring Boot jar or else
+    // Codekvast won't find anything. (It does not yet understand Spring Boot's proprietary über-jar format)
     enabled = false
 }
 
-def codekvastAgent=configurations.codekvastagent.asPath
+apply plugin: 'application'
+
+// Download codekvast-agent.jar to a well-known location...
+applicationDistribution.from(configurations.codekvast) { into 'codekvast' }
+def codekvastAgent="build/install/${rootProject.name}/codekvast/codekvast-agent-${codekvastVersion}-all.jar"
+
 applicationDefaultJvmArgs = [
         "-Xbootclasspath/a:$codekvastAgent",
         "-javaagent:$codekvastAgent"
