--- a/codekvast.conf
+++ b/codekvast.conf
@@ -1,25 +1,26 @@
 #-----------------------------------------------------------------------------------------
 # Sample Codekvast configuration file.
-# See http://www.codekvast.io/pages/config.html for all details.
+# See user manual for all details.
+# The user manual is located in codekvast/CodekvastUserManual-0.20.3.html
 # Below are the most common configuration properties described.
 #-----------------------------------------------------------------------------------------
 
 # What is my application's name? Useful if more that one app deliver data to the same Codekvast server.
-appName = codekvast-sample1
+appName = codekvast-spring
 
 # What is my app's version?
 # The value of this parameter is a strategy for obtaining the actual version from a file name, a jar file manifest or from
 # a literal value.
 # See user manual for full description of how to specify the appVersion.
-appVersion = filename codekvast-sample1-(.*).jar
+appVersion = filename codekvast-spring-(.*).jar
 
 # Where are my application binaries?
 # A comma-separated list of file system paths relative to the root directory.
-codeBase = build/install/codekvast-sample1/lib
+codeBase = build/libs
 
 # What packages shall be tracked?
 # A comma-separated list of strings.
-packages = io.codekvast.sample1
+packages = io.codekvast.sample
 
 # What packages shall *not* be tracked?
 # A comma-separated list of strings.
@@ -36,11 +37,8 @@ methodVisibility = private
 
 # Where is the Codekvast server?
 # NOTE: $CODEKVAST_URL is injected by Heroku
-serverUrl=${CODEKVAST_URL}
+serverUrl = $CODEKVAST_URL
 
 # What is my license key?
 # NOTE: $CODEKVAST_LICENSE_KEY is injected by Heroku
-licenseKey=${CODEKVAST_LICENSE_KEY}
-
-# Should Codekvast Agent configure logging for Aspectj Weaver? Useful for trouble shooting.
-# aspectjOptions = -verbose -showWeaveInfo
+licenseKey = $CODEKVAST_LICENSE_KEY
