--- a/codekvast.conf
+++ b/codekvast.conf
@@ -1,7 +1,7 @@
 #-----------------------------------------------------------------------------------------
 # Sample Codekvast configuration file.
 # See user manual for all details.
-# The user manual is located in codekvast/CodekvastUserManual-0.20.0.html
+# The user manual is located in codekvast/CodekvastUserManual-0.20.3.html
 # Below are the most common configuration properties described.
 #-----------------------------------------------------------------------------------------
 
@@ -16,7 +16,7 @@ appVersion = filename codekvast-spring-(.*).jar
 
 # Where are my application binaries?
 # A comma-separated list of file system paths relative to the root directory.
-codeBase = build/install/codekvast-spring/lib
+codeBase = build/libs
 
 # What packages shall be tracked?
 # A comma-separated list of strings.
@@ -37,8 +37,8 @@ methodVisibility = private
 
 # Where is the Codekvast server?
 # NOTE: $CODEKVAST_URL is injected by Heroku
-serverUrl=${CODEKVAST_URL}
+serverUrl = $CODEKVAST_URL
 
 # What is my license key?
 # NOTE: $CODEKVAST_LICENSE_KEY is injected by Heroku
-licenseKey=${CODEKVAST_LICENSE_KEY}
+licenseKey = $CODEKVAST_LICENSE_KEY
