--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ repositories {
     jcenter() // Required to find codekvast-agent
 }
 
-def codekvastVersion='0.21.2'
+def codekvastVersion='0.21.3'
 def newrelicVersion='3.39.0'
 
 configurations { javaagent }
@@ -52,7 +52,7 @@ def newrelicAgent="build/install/${rootProject.name}/javaagent/newrelic-agent-${
 applicationDefaultJvmArgs = [
         "-Xbootclasspath/a:$codekvastAgent",
         "-javaagent:$codekvastAgent",
-        // "-javaagent:$newrelicAgent"
+        "-javaagent:$newrelicAgent"
 ]
 
 // Override the default Gradle buildpack stuff...
