--- a/codekvast.conf
+++ b/codekvast.conf
@@ -6,7 +6,7 @@
 #-----------------------------------------------------------------------------------------
 
 # What is my application's name? Useful if more that one app deliver data to the same Codekvast server.
-appName = codekvast-spring
+appName = codekvast-sample1
 
 # What is my app's version?
 # The value of this parameter is a strategy for obtaining the actual version from a file name, a jar file manifest or from
