--- a/codekvast.conf
+++ b/codekvast.conf
@@ -12,11 +12,11 @@ appName = codekvast-sample1
 # The value of this parameter is a strategy for obtaining the actual version from a file name, a jar file manifest or from
 # a literal value.
 # See user manual for full description of how to specify the appVersion.
-appVersion = filename codekvast-spring-(.*).jar
+appVersion = filename codekvast-sample1-(.*).jar
 
 # Where are my application binaries?
 # A comma-separated list of file system paths relative to the root directory.
-codeBase = build/install/codekvast-spring/lib
+codeBase = build/install/codekvast-sample1/lib
 
 # What packages shall be tracked?
 # A comma-separated list of strings.
