Updated build.gradle to match master

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,9 @@ repositories {
 dependencies {
     compileOnly 'org.projectlombok:lombok:1.16.18'
 
+    compile 'org.springframework.boot:spring-boot-devtools'
     compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
 
     testCompile 'org.springframework.boot:spring-boot-starter-test'
