Upgraded to codekvast-agent 0.21.4

--- a/codekvast.conf
+++ b/codekvast.conf
@@ -1,7 +1,6 @@
 #-----------------------------------------------------------------------------------------
 # Sample Codekvast configuration file.
-# See user manual for all details.
-# The user manual is located in codekvast/CodekvastUserManual-0.20.3.html
+# See http://www.codekvast.io/pages/config.html for all details.
 # Below are the most common configuration properties described.
 #-----------------------------------------------------------------------------------------
 
