--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ sourceCompatibility = 1.8
 dependencies {
     compileOnly 'org.projectlombok:lombok:1.16.18'
 
-    compile 'org.springframework.boot:spring-boot-devtools'
+    // compile 'org.springframework.boot:spring-boot-devtools'
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
