Corrected codekvast.conf

--- a/codekvast.conf
+++ b/codekvast.conf
@@ -1,7 +1,6 @@
 #-----------------------------------------------------------------------------------------
 # Sample Codekvast configuration file.
-# See user manual for all details.
-# The user manual is located in codekvast/CodekvastUserManual-0.20.0.html
+# See http://www.codekvast.io/pages/config.html for all details.
 # Below are the most common configuration properties described.
 #-----------------------------------------------------------------------------------------
 
@@ -20,7 +19,7 @@ codeBase = build/install/codekvast-sample1/lib
 
 # What packages shall be tracked?
 # A comma-separated list of strings.
-packages = io.codekvast.sample
+packages = io.codekvast.sample1
 
 # What packages shall *not* be tracked?
 # A comma-separated list of strings.
@@ -42,3 +41,6 @@ serverUrl=${CODEKVAST_URL}
 # What is my license key?
 # NOTE: $CODEKVAST_LICENSE_KEY is injected by Heroku
 licenseKey=${CODEKVAST_LICENSE_KEY}
+
+# Should Codekvast Agent configure logging for Aspectj Weaver? Useful for trouble shooting.
+# aspectjOptions = -verbose -showWeaveInfo
