Corrected codekvast.conf

--- a/codekvast.conf
+++ b/codekvast.conf
@@ -19,7 +19,7 @@ codeBase = build/libs
 
 # What packages shall be tracked?
 # A comma-separated list of strings.
-packages = io.codekvast.sample
+packages = io.codekvast.sample1
 
 # What packages shall *not* be tracked?
 # A comma-separated list of strings.
