--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,4 +29,4 @@ app.herokuId = external-1
 
 # What application name shall appear in the Heroku integration menu when navigating to Codekvast from this app?
 # Should be the the Heroku app name, i.e., xxx part of https://xxx.herokuapp.com
-app.herokuAppName = codekvast-sample1
+app.herokuAppName = codekvast-demo1
