--- a/codekvast.conf
+++ b/codekvast.conf
@@ -5,21 +5,21 @@
 #-----------------------------------------------------------------------------------------
 
 # What is my application's name? Useful if more that one app deliver data to the same Codekvast server.
-appName = codekvast-sample1
+appName = codekvast-demo1
 
 # What is my app's version?
 # The value of this parameter is a strategy for obtaining the actual version from a file name, a jar file manifest or from
 # a literal value.
 # See user manual for full description of how to specify the appVersion.
-appVersion = filename codekvast-sample1-(.*).jar
+appVersion = filename codekvast-demo1-(.*).jar
 
 # Where are my application binaries?
 # A comma-separated list of file system paths relative to the root directory.
-codeBase = build/install/codekvast-sample1/lib
+codeBase = build/install/codekvast-demo1/lib
 
 # What packages shall be tracked?
 # A comma-separated list of strings.
-packages = io.codekvast.sample1
+packages = io.codekvast.demo1
 
 # What packages shall *not* be tracked?
 # A comma-separated list of strings.
