Upgraded to Gradle 4.4. Replaced "Codekvast Warehouse" with "Codekvast Dashboard".

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=9090
 
 # This is the value that Heroku uses when they generate SSO tokens.
 #
-# This fallback value is chosen to be the same value as Codekvast uses when doing `gradle :product:warehouse:bootRun`
+# This fallback value is chosen to be the same value as Codekvast uses when doing `gradle :product:dashboard:bootRun`
 #
 # Override in production by doing `heroku config:set CODEKVAST_HEROKUAPISSOSALT=xxx` where xxx is the same value
 # as used by the Ansible playbook that deploys Codekvast itself.
